--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -8,9 +8,9 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
-    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}">&hellip;</a></li>
+    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}" alt="Bus stops">{% if dumb %}Bus stops{% else %}&hellip;{% endif %}</a></li>
 {% endblock %}
 
 {% block pagetitle %}Bus stop{% endblock %}
