--- a/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/category_detail.xhtml
@@ -3,9 +3,11 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
-    <li><a href="{% url maps_category_list %}">&hellip;</a></li>
+    <li><a href="{% url maps_category_list %}">
+        {% if dumb %}Categories{% else %}&hellip;{% endif %}
+    </a></li>
 {% endblock %}
 
 {% block pagetitle %}{{ entity_type.verbose_name_plural|capfirst }}{% endblock %}
