--- a/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
 {% endblock %}
 
