--- a/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -4,9 +4,10 @@
 {% block breadcrumbs %}
 {{ block.super }}
 	<li><a href="{% url maps_index %}">
-        <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
+        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>{% endif %}
     </a></li>
-    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}">&hellip;</a></li>
+    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}">
+        {% if dumb %}{{ entity.entity_type.verbose_name_plural|capfirst }}{% else %}&hellip;{% endif %}</a></li>
 {% endblock %}
 
 {% block pagetitle %}{{ data.dc_title }}{% endblock %}
