--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -2,7 +2,7 @@ body {
     font-family: "Liberation Sans", Arial, sans-serif;
     margin:0;
 /*    background-color:#4b92db;*/
-	background-image:url('../../png/stripes.png');
+	background-image:url('../png/stripes.png');
     min-width:615px;
 }
 
