--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -47,7 +47,7 @@ div.features, div.preview {
     -webkit-border-radius:10px;
 	border-style:solid;
 	border-width:5px;
-	border-color:#4b92db;
+	border-color:#cfd9e5;
     margin:15px auto;
     max-width:665px;
     
