--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -40,6 +40,14 @@
       <img class="brandmark" src="{{ MEDIA_URL }}gif/brandmarks/2217_ox_brand1_pos.gif" alt="University of Oxford" height="115" width="115" />
     </div>
     
+	<div class="access">
+	  <h2>How to access</h2>
+	  <p>
+		How to access m.ox.ac.uk
+		<img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk">
+		<img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk">
+		</p>
+	</div>
     <div class="preview">
       <h2>Preview</h2>
     
