--- a/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -21,11 +21,19 @@
         
         <dl>
             <dt>Oxontime</dt>
+			<dt>Oxfordshire County Council</dt>
+			<dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
             <dt>Edina</dt>
-            <dt>OpenStreetMap</dt>
+            <dt>OpenStreetMap and Contributors</dt>
             <dt>Oxford University Estates Department</dt>
             <dt>Oxford University Library Services</dt>
+			<dt>Cloudmade</dt>
         </dl>
     </div>
 </div>
 
+<div class="section-nopad">
+	<h2 class="section-header">Be aware</h2>
+	<div class="section-content">
+		<p>
+			Please note that using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes according to you
