--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -44,10 +44,11 @@
 	  <h2>How to access</h2>
 	  <p>
 		How to access m.ox.ac.uk
-		<img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk">
-		<img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk">
+		<img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk" height="156" width="156" />
+		<img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="156" width="156"/>
 		</p>
 	</div>
+	
     <div class="preview">
       <h2>Preview</h2>
     
