--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -44,12 +44,10 @@
 	  <h2>How to access</h2>
 	  <p>How to access Mobile Oxford</p>
 		<ul>
-			<li class="access-address">Open up your phone's web browser and head to: <a href="http://m.ox.ac.uk">m.ox.ac.uk</a></li>
-			<li class="access-datamatrix"></li>
-			<li class="access-qrcode"></li>
+			<li>Open up your phone's web browser and head to: <a href="http://m.ox.ac.uk">m.ox.ac.uk</a></li>
+			<li id="access-datamatrix"><img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk" height="156" width="156" /></li>
+			<li id="access-qrcode"><img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="156" width="156"/></li>
 		</ul>
-		<img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk" height="156" width="156" />
-		<img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="156" width="156"/>
 	</div>
 	
     <div class="preview">
