--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -58,7 +58,7 @@ div.features h2, div.preview h2, div.access h2 {
     margin-top:0;
 }
 
-div.access ul li{
+div.access li{
 	text-decoration:none;
 	
 }
