--- a/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -58,8 +58,8 @@ div.features h2, div.preview h2, div.access h2 {
     margin-top:0;
 }
 
-div.access li{
-	text-decoration:none;
+div.access ul{
+	list-style:none;
 	
 }
 
