--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -47,6 +47,9 @@
 			<li>Open up your phone's web browser and head to: <a href="http://m.ox.ac.uk">m.ox.ac.uk</a></li>
 			<li id="access-datamatrix"><img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="Data Matrix Barcode for m.ox.ac.uk" height="156" width="156" /></li>
 			<li id="access-qrcode"><img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="156" width="156"/></li>
+			<li>Tweet #mobileox</li>
+			<li>How to access WiFi on your phone - link to OUCS wifi config</li>
+			<li>Mobile Oxford blog</li>
 		</ul>
 	</div>
 	
