Fixing manual location updatage.

--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -45,7 +45,9 @@
         <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Mobile Oxford" style="float:right;"/>
     </div>
 
-    
+    <div class="section">
+        <h3>{{ session_key }}</h3>
+    </div>
     
 {% if user.is_superuser %}
     <hr/>
