--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -20,7 +20,7 @@
 <div class="list-note">
 {% if preferences.location.location %}
 <div class="bubble">
-We think you are near <strong>{{ preferences.location.placemark.0 }}</strong>. If this is not correct, please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>. </div>
+We think you are near <strong class="location_name">{{ preferences.location.placemark.0 }}</strong>. If this is not correct, please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>. </div>
 {% else %}
 <div class="bubble">We do not yet have a location for you. Please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
 {% endif %}
