--- a/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -1,6 +1,6 @@
 {% extends "z3950/base.xhtml" %}
 
-{% block pagetitle %}OLIS{% endblock %}
+{% block pagetitle %}Library Search{% endblock %}
 {% block pagetitleclass %}z3950-header with-icon{% endblock %}
 
 {% block content %}
