Added weather pages

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -60,3 +60,7 @@ li#menu-z3950 {
     background-image:url('../../png/z3950.png');
 }
 
+li#menu-weather {
+    background-image:url('../../png/weather.png');
+}
+
