--- a/mobile_portal/mobile_portal/site-media/css/breadcrumbs.css
+++ b/mobile_portal/mobile_portal/site-media/css/breadcrumbs.css
@@ -86,3 +86,7 @@ h1.z3950-header {
 h1.rss-header {
     background-image:url('../png/rss-bc.png');
 }
+
+h1.weather-header {
+    background-image:url('../png/weather-bc.png');
+}
