Added observations time.

--- a/mobile_portal/mobile_portal/templates/weather/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/weather/index.xhtml
@@ -8,7 +8,8 @@
 <div class="list-section">
 	<h2 class="section-header">Latest observations for Oxford</h2>
 	<div class="list-note"><div class="bubble">
-	    <img src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}.png" alt="{{ weather.get_outlook_display|capfirst }}"/>
+	    <img src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}.png" alt="{{ weather.get_outlook_display|capfirst }}"/><br/>
+	    Observed on {{ weather.observed_date|date:"D j M Y \a\t H:m" }}
 	</div></div>
 	<table class="section-table">
 	    <tbody>
