--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -34,8 +34,8 @@
         <ul class="ml">
 {#            <li><a href="/help/">Using this site</a></li>#}
 {#            <li><a href="/customise/">Customise this page</a></li>#}
-            <li class="top"><a href="{% url core_update_location %}">Location-finding preferences</a></li>
-            <li><a href="{% url core_static_about %}">About this site</a></li>
+{#            <li><a href="{% url core_update_location %}">Location-finding preferences</a></li> #}
+            <li class="top"><a href="{% url core_static_about %}">About this site</a></li>
 {#            <li><a href="/legal/">Legal</a></li>#}
 
         </ul>
@@ -44,11 +44,11 @@
     <div class="section-nopad">
         <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Mobile Oxford" style="float:right;"/>
     </div>
-
+<!--
     <div class="section">
         <h3>{{ session_key }}</h3>
     </div>
-    
+-->
 {% if user.is_superuser %}
     <hr/>
     <div class="section">
