--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -4,6 +4,7 @@
 	<title>Mobile Oxford</title>
 	<link rel="icon" type="image/vnd.microsoft.icon" href="{{ MEDIA_URL }}ico/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}css/desktop_about.css"/>
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
 	<script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"> </script>    
     <script type="text/javascript">
@@ -69,7 +70,7 @@
         <h3>Library search</h3>
         <p>
           Search for books and other items by author, title or
-          <acronym title="International Standard Book Number">ISBN</acronym>.
+          <abbr title="International Standard Book Number">ISBN</abbr>.
           Results are displayed with the nearest first and simple
           maps to guide you to the library.
         </p>
