Added robots.txt to stop Google from updating its location. Fixed relative path error in CSS. Geocoding test now only performs one geocode to keep Cloudmade happy.

--- a/mobile_portal/mobile_portal/site-media/css/classes/touch.css
+++ b/mobile_portal/mobile_portal/site-media/css/classes/touch.css
@@ -275,7 +275,7 @@ ul.popup-tabs li.not-tab a {
 }
 
 div.wait-tab {
-    background-image:url('../gif/wait24trans.gif');
+    background-image:url('../../gif/wait24trans.gif');
     background-position:center;
     height:100px;
     background-repeat:no-repeat;
